2004-11-02  Vincent Noel  <vnoel@cox.net>

	* info.c (LogInfo): Huge simplification. No more gtktreeview, just
	display the properties in a textview.

	* logview.c (logview_create_window_open_file): Don't update the
	status bar or the window title here, this is already done in log_repaint.

	* info.c (RepaintLogInfo): Don't use gtk_tree_model_get_iter_root.

	* logview.c (logview_menus_set_state): Desensitize menu items when
	monitoring.

	* monitor.c (mon_check_logs): Be sure to stop the monitoring when
	the file is closed.

	* logrtns.c (ReadNewLines, ReadLastPage): Free a temp buffer.

	* logview.h: Remove useless defines and stuff.

	* monitor.c (mon_update_display): When new lines are added to the
	logfile, select them in the monitor.

	* logrtns.c (reverse) : kill. We have g_strreverse anyway.
	(WasModified, CloseLog, ReadLogStats, ReadNewLines)
	(ReadLastPage, isLogFile, OpenLogFile): Use gnome-vfs.
	
	Aggregate the FIXME functions at the end of the file.

2004-10-31  James Bowes  <bowes@cs.dal.ca>

	* Makefile.am: Minor fixes to pass make distcheck.

2004-10-29  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_create_window_open_file): New function to
	create a window and open a file at the same time.
	(logview_count_logs): Fix a stupid bug that went unnoticed but
	made the function useless.
	(restore_session): Kill. Useless now that command line parameters
	are correctly handled.
	(save_session): Fix to save command line parameters.
	Use POPT_TABLEEND.

	* log_repaint.c: kill InitPages.

	* logview.c (main): Really try to open each log passed as a
	parameter. Only open the default logs if no log was opened.

	* logrtns.c (OpenLogFile): Mark the first_time flag here.

	* logview.c (CreateMainWin): Use a fixed size for cells in the
	gtktreeview.

2004-10-28  Vincent Noel  <vnoel@cox.net>

	* logview-findbar.c (logview_findbar_populate): Add a spacer tool
	item so the close button is at the right end of the find bar.