@@ -1,7 +1,11 @@
 2004-11-02  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c (logview_create_window): Use g_signal_connect instead
+	of gtk_signal_connect.
+
 	* info.c (LogInfo): Huge simplification. No more gtktreeview, just
 	display the properties in a textview.
+	(LogInfo): Use g_signal_connect instead of gtk_signal_connect.
 
 	* logview.c (logview_create_window_open_file): Don't update the
 	status bar or the window title here, this is already done in log_repaint.
